cmake_minimum_required(VERSION 3.20)
project(StereoVision VERSION 1.0)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_subdirectory(CameraModel)
add_subdirectory(CalculateImageDepth)
add_executable(StereoVision ${CMAKE_CURRENT_SOURCE_DIR}/CameraModelTest/CameraModelTest.cpp)
target_link_libraries(StereoVision PUBLIC CameraModel)
target_link_libraries(StereoVision PUBLIC CalculateImageDepth)
target_include_directories(StereoVision PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/CameraModel)

target_include_directories(StereoVision PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Library/windows/VTK/include/vtk-9.1)
file(GLOB HEAD_FILES1 ${CMAKE_CURRENT_SOURCE_DIR}/CameraModel/*.h)
install(FILES ${HEAD_FILES1} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
file(GLOB HEAD_FILES2 ${CMAKE_CURRENT_SOURCE_DIR}/CalculateImageDepth/*.h)
install(FILES ${HEAD_FILES2} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
install(TARGETS StereoVision DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
install(TARGETS CameraModel DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
install(TARGETS CalculateImageDepth DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)